# terminaider

./: .gitignore  README.md  codecov.yml  config.yaml  go.mod  go.sum  groq.go  groqe.py  main.go  main.py  pyproject.toml  requirements.txt
api/: groq.go
config/: Readme.md  config.go
prompts/: types.go
src/: __init__.py  agent.py  ai_interface.py  config.py  conversationManager.go  conversationManager_test.go  prompts.py  runChat.go  run_chat.py  utils.py
terminaider/: __init__.py  agent.py  ai_interface.py  main.py  run_chat.py  utils.py
terminaider/prompts/: engineer.go  execute.go
terminaider/src/: agent.py  ai_interface.py  conversationManager.go  run_chat.py  utils.py
themes/: themes.py
