[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminaider"
version = "0.1.0"
description = "AI for your terminal"
authors = [{ name = "Daniel Ratmiroff", email = "danielratmiroff@pm.me" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["terminal", "ai", "automation", "cli"]
dependencies = ["appdirs>=1.4.4"]

[project.scripts]
ai = "ai.main:main"

[project.urls]
"Homepage" = "https://github.com/Danielratmiroff/gai"
"Source" = "https://github.com/Danielratmiroff/gai"
"Bug Tracker" = "https://github.com/Danielratmiroff/gai/issues"
"Documentation" = "https://github.com/Danielratmiroff/gai#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["gai*"]
exclude = ["tests*"]
